2016-01-20 Harish Potti <harish.potti@cern.ch>
	* Xsection for tHjb and WtH samples
	
2016-01-18 David Hohn <david.hohn@cern.ch>
	* full switch to calib eta in JVT cut, we were doing OR with EMscale eta jvt cut jets, should be tiny effect

2016-01-15 David Hohn <david.hohn@cern.ch>
	* added script for downloading from grid, hadding and uploading to eos
	* cobbled together from stuff I had lying around and a couple of tricks Chris had

2016-01-14 David Hohn <david.hohn@cern.ch>
	* small fixes for data

2016-01-13 Peter Onyisi
	* some minor efficiency improvements, avoid setting zero electron SFs

2016-01-13 David Hohn <david.hohn@cern.ch>
	* tag ttHMultiAna-00-01-00
	* major version for systematics :)

2016-01-13 David Hohn <david.hohn@cern.ch>
	* add pileup reweighting configs for full stat ttbar dilep and tH, WtH, tZ
	  generated with AthAnalysiBase,2.3.39
	* strawman TTVA cuts
	* flat tau SFs, bit superfluous with one tau...
	* Selector that cuts on sum of electron and muon
	* cleanup obsolete options in config, NLepton cut in Sys config
	* do JVT cut and lepton Isolation in Top
	* use impact parameters from Top, dont recompute
	* dont use lepton Isolation from Top, inconsistencies seen
	* remove old/unused SFs
	* NaN in lepSFTrig variations observed, set to 1
	* Set AutoFlush Zero

2016-01-12 Peter Onyisi <ponyisi@cern.ch>
	* Add some Z-finding info

2016-01-12 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* included flags isPrompt, isBremsElec, and isFakeLep

2016-01-12 David Hohn <david.hohn@cern.ch>
	* remove lepton and tau SF systematic from systematic trees
	* normalise systematic event weights

2016-01-11 Peter Onyisi <ponyisi@cern.ch>
	* Some additional tweaks & fixes to lepton SF & systematics
 
2016-01-11 David Hohn <david.hohn@cern.ch>
	* more slimming
	* not even truth in Nominal tree when doing systematics
	* move initialisation of tools outside loop of sys trees